
syntax = "proto3";

option go_package = "github.com/cuemby/ccp-sdk/gen/go/accounts/v1alpha1/projects";
package accounts.v1alpha1.projects.v1;


/*
    Requests
*/  
message CreateProjectRequest {
    string name = 1;
    string description = 2;
    string image = 3;
    uint32 organization_id = 4;
    string user_id = 5;
}

message GetOneProjectRequest {
    int32 id = 1;
}

message DeleteProjectRequest {
    int32 id = 1;
}

message ListProjectRequest{
    uint32 organization_id = 1;
}

message UpdateProjectRequest {
    int32 id = 1;
    CreateProjectRequest project = 2;
}
/*
    Responses
*/

message MenberRol {
    uint32 id = 1;
    string name = 2;
    bool is_admin = 3;
}


/* PROJECTS */

message ProjectList{
    string name = 1;
    string image = 2;
}

message MenberProject {

    uint32 id = 1;
    string user_id = 2;
    string first_name = 3;
    string last_name = 4;
    bool is_active = 5;
    string image = 6;
    string role = 7;
    repeated ProjectList projects = 8;

}



message CreateProjectResponse {
    string msg = 1;
    string error = 2;
    uint32 id = 3;
}

message UpdateProjectResponse{
    string msg = 1;
    string error = 2;
}

message DeleteProjectResponse{
    string msg = 1;
    string error = 2;
}

message GetOneProjectResponse {
    int32 id = 1;
    string name = 2;
    string image = 3;
    uint32 organization_id = 4;
    string description = 5;
    string created_at = 6;
    string updated_at = 7;
    repeated MenberProject members = 8;
    UserList owner = 9;

}


message ListProjectResponse {
    repeated Project projects = 1;
}

message ListProjectPaginationRequest {
    int32 offset = 1;
    int32 limit = 2;
}

message ListProjectPaginationResponse {
    repeated Project projects = 1;
    int64 count = 2;
}

message Project {
    int32 id = 1;
    string name = 2;
    string image = 3;
    uint32 organization_id = 4;
    string description = 5;
    string created_at = 6;
    string updated_at = 7;
    repeated Role roles = 8;
    repeated UserList users = 9;

}

/* PROJECTS */
//Authentication without group and permission
message UserList {
    uint32 id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string user_id = 5;
    bool is_active = 6;
    bool is_super_user = 7;
    string image = 8;

}


message Role {
    uint32 id = 1;
    string name = 2;
    uint32 project_id = 3;
    uint32 organization_id = 4;
    repeated Permission permissions = 5;
    bool is_admin = 6;
}


message Permission {
    uint32 id = 1;
    string name = 2;
    string action =3;
    string type = 4;
    string full_name = 5;
}

/*
    DELETE ROLE BY USER
*/

message  DeleteUserByProjectRequest {
    uint32 user_id = 1;
    uint32 project_id = 2;
}

message DeleteUserByProjectResponse {
    string msg = 1;
    string error = 2;
}

message  EditRoleUserByProjectRequest {
    uint32 user_id = 1;
    uint32 project_id = 2;
    uint32 role_id = 3;
}

message EditRoleUserByProjectResponse {
    string msg = 1;
    string error = 2;
}
