syntax = "proto3";

option go_package = "github.com/cuemby/ccp-sdk/gen/go/accounts/v1alpha1/projects";

import "accounts/v1alpha1/projects/projects.proto";
package accounts.v1alpha1.projects.v1;

// import "projects.proto";
// import "../accounts.proto";

service ProjectService {
    //CRUD Project
    rpc CreateProject(CreateProjectRequest) returns (CreateProjectResponse);
    rpc GetOneProject(GetOneProjectRequest) returns (GetOneProjectResponse);
    rpc UpdateProject(UpdateProjectRequest) returns (UpdateProjectResponse);
    rpc DeleteProject(DeleteProjectRequest) returns (DeleteProjectResponse);
    rpc ListProject(ListProjectRequest) returns (ListProjectResponse);
    rpc ListProjectPagination(ListProjectPaginationRequest) returns (ListProjectPaginationResponse);
    // EDITTS AND DELETE USERS
    rpc DeleteUserByProject(DeleteUserByProjectRequest) returns (DeleteUserByProjectResponse);
    rpc EditRoleUserByProject(EditRoleUserByProjectRequest) returns (EditRoleUserByProjectResponse);
    rpc ListProjectByOrganization(ListProjectByOrganizationRequest) returns (ListProjectByOrganizationResponse);
    rpc UpdadeProjectRole(UpdadeProjectRoleRequest) returns (UpdadeProjectRoleResponse);
}